force-app/main/default/objects/Permit_to_Work__c/Permit_to_Work__c.object-meta.xml
<CustomObject>
    <label>Permit to Work</label>
    <nameField>
        <label>Permit to Work</label>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <pluralLabel>Permits to Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>