force-app/main/default/objects/Permit_to_Work__c/fields/Authorization_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorization_3_Date__c</fullName>
    <label>Authorization 3 Date</label>
    <type>Date</type>
</CustomField>