force-app/main/default/objects/Permit_to_Work__c/fields/Authorizer_2__c.field-meta.xml
<CustomField>
    <fullName>Authorizer_2__c</fullName>
    <label>Authorizer 2</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>PTW_Authorizers2</relationshipName>
</CustomField>