force-app/main/default/objects/Permit_to_Work__c/fields/Authorizer_3__c.field-meta.xml
<CustomField>
    <fullName>Authorizer_3__c</fullName>
    <label>Authorizer 3</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>PTW_Authorizers3</relationshipName>
</CustomField>