force-app/main/default/objects/Permit_to_Work__c/fields/Authorizer__c.field-meta.xml
<CustomField>
    <fullName>Authorizer__c</fullName>
    <label>Authorizer</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>PTW_Authorizers</relationshipName>
</CustomField>