force-app/main/default/objects/Permit_to_Work__c/fields/CO_Level_Ppm__c.field-meta.xml
<CustomField>
    <fullName>CO_Level_Ppm__c</fullName>
    <label>CO Level (ppm)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>