force-app/main/default/objects/Permit_to_Work__c/fields/Energy_Isolation_Type__c.field-meta.xml
<CustomField>
    <fullName>Energy_Isolation_Type__c</fullName>
    <label>Energy Isolation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electrical Isolation</fullName>
            </value>
            <value>
                <fullName>Mechanical Isolation</fullName>
            </value>
            <value>
                <fullName>Pneumatic Isolation</fullName>
            </value>
            <value>
                <fullName>Hydraulic Isolation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>