force-app/main/default/objects/Permit_to_Work__c/fields/Gas_Test_Completed__c.field-meta.xml
<CustomField>
    <fullName>Gas_Test_Completed__c</fullName>
    <label>Gas Test Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>