force-app/main/default/objects/Permit_to_Work__c/fields/Gas_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Gas_Test_Result__c</fullName>
    <label>Gas Test Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>