force-app/main/default/objects/Permit_to_Work__c/fields/H2S_Level_Ppm__c.field-meta.xml
<CustomField>
    <fullName>H2S_Level_Ppm__c</fullName>
    <label>H2S Level (ppm)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>