force-app/main/default/objects/Permit_to_Work__c/fields/Holder__c.field-meta.xml
<CustomField>
    <fullName>Holder__c</fullName>
    <label>Holder</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Held Permits</relationshipLabel>
    <relationshipName>Held_Permits</relationshipName>
    <type>Lookup</type>
</CustomField>