force-app/main/default/objects/Permit_to_Work__c/fields/Isolation_Required__c.field-meta.xml
<CustomField>
    <fullName>Isolation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Isolation Required</label>
    <type>Checkbox</type>
</CustomField>