force-app/main/default/objects/Permit_to_Work__c/fields/Isolation_Verified__c.field-meta.xml
<CustomField>
    <fullName>Isolation_Verified__c</fullName>
    <label>Isolation Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>