force-app/main/default/objects/Permit_to_Work__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <label>Issuer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Issued Permits</relationshipLabel>
    <relationshipName>Issued_Permits</relationshipName>
    <type>Lookup</type>
</CustomField>