force-app/main/default/objects/Permit_to_Work__c/fields/LEL_Pct__c.field-meta.xml
<CustomField>
    <fullName>LEL_Pct__c</fullName>
    <label>LEL (%)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>