force-app/main/default/objects/Permit_to_Work__c/fields/Lockout_Tagout_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lockout_Tagout_Completed__c</fullName>
    <label>Lockout/Tagout Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>