force-app/main/default/objects/Permit_to_Work__c/fields/Oxygen_Level_Pct__c.field-meta.xml
<CustomField>
    <fullName>Oxygen_Level_Pct__c</fullName>
    <label>Oxygen Level (%)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>