force-app/main/default/objects/Permit_to_Work__c/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot Work</fullName>
            </value>
            <value>
                <fullName>Confined Space</fullName>
            </value>
            <value>
                <fullName>Confined Space Entry</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Excavation</fullName>
            </value>
            <value>
                <fullName>Work at Height</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>