force-app/main/default/objects/Permit_to_Work__c/fields/Pipeline_Station__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Station__c</fullName>
    <label>Pipeline Station</label>
    <referenceTo>Pipeline_Station__c</referenceTo>
    <relationshipLabel>Permits to Work</relationshipLabel>
    <relationshipName>Permits_to_Work</relationshipName>
    <type>Lookup</type>
</CustomField>