force-app/main/default/objects/Permit_to_Work__c/fields/PTW_Number__c.field-meta.xml
<CustomField>
    <fullName>PTW_Number__c</fullName>
    <label>PTW Number</label>
    <type>Text</type>
    <length>100</length>
</CustomField>