force-app/main/default/objects/Permit_to_Work__c/fields/Refinery__c.field-meta.xml
<CustomField>
    <fullName>Refinery__c</fullName>
    <label>Refinery</label>
    <referenceTo>Refinery__c</referenceTo>
    <relationshipLabel>Permits to Work</relationshipLabel>
    <relationshipName>Permits_to_Work</relationshipName>
    <type>Lookup</type>
</CustomField>