force-app/main/default/objects/Permit_to_Work__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <label>Scope of Work</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>