force-app/main/default/objects/Permit_to_Work__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <label>Terminal</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipLabel>Permits to Work</relationshipLabel>
    <relationshipName>Permits_to_Work</relationshipName>
    <type>Lookup</type>
</CustomField>