force-app/main/default/objects/Permit_to_Work__c/fields/Well__c.field-meta.xml
<CustomField>
    <fullName>Well__c</fullName>
    <label>Well</label>
    <referenceTo>Well__c</referenceTo>
    <relationshipLabel>Permits to Work</relationshipLabel>
    <relationshipName>Permits_to_Work</relationshipName>
    <type>Lookup</type>
</CustomField>