force-app/main/default/objects/Permit_to_Work__c/fields/Zero_Energy_State_Verified__c.field-meta.xml
<CustomField>
    <fullName>Zero_Energy_State_Verified__c</fullName>
    <label>Zero Energy State Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>