force-app/main/default/objects/Permit_to_Work__c/validationRules/Require_Gas_Test_Results.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Gas_Test_Results</fullName>
    <active>true</active>
    <description>Gas test results must be provided when gas test is required and completed.</description>
    <errorConditionFormula>Gas_Test_Required__c &amp;&amp; Gas_Test_Completed__c &amp;&amp; NOT(ISPICKVAL(Gas_Test_Result__c, 'Pass')) &amp;&amp; NOT(ISPICKVAL(Gas_Test_Result__c, 'Fail')) &amp;&amp; NOT(ISPICKVAL(Gas_Test_Result__c, 'Not Required'))</errorConditionFormula>
    <errorMessage>Gas Test Result (Pass/Fail) is required when gas test has been completed.</errorMessage>
</ValidationRule>