force-app/main/default/objects/Permit_to_Work__c/validationRules/Require_Scope_of_Work.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Scope_of_Work</fullName>
    <active>true</active>
    <description>Scope of Work must be at least 10 characters when provided.</description>
    <errorConditionFormula>NOT(ISBLANK(Scope_of_Work__c)) &amp;&amp; LEN(Scope_of_Work__c) &lt; 10</errorConditionFormula>
    <errorMessage>Scope of Work must be at least 10 characters long.</errorMessage>
</ValidationRule>