force-app/main/default/objects/Permit_to_Work__c/validationRules/Valid_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Date_Range</fullName>
    <active>true</active>
    <description>Permit end time must be after start time.</description>
    <errorConditionFormula>NOT(ISBLANK(Start_DateTime__c)) &amp;&amp; NOT(ISBLANK(End_DateTime__c)) &amp;&amp; End_DateTime__c &lt;= Start_DateTime__c</errorConditionFormula>
    <errorMessage>Permit End Date/Time must be after Start Date/Time.</errorMessage>
</ValidationRule>